wrapper/include/Rtsi/Elite_Rtsi_C.h

typedef struct elite_rtsi_client_handle_t elite_rtsi_client_handle_t;
typedef struct elite_rtsi_recipe_handle_t elite_rtsi_recipe_handle_t;
typedef struct elite_rtsi_io_handle_t elite_rtsi_io_handle_t;
ELITE_C_EXPORT elite_c_status_t elite_rtsi_client_receive_data_multi(elite_rtsi_client_handle_t* handle,
                                                                     elite_rtsi_recipe_handle_t** recipes, int32_t recipe_count,
                                                                     int32_t read_newest, int32_t* out_received_index);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_recipe_get_recipe_csv(elite_rtsi_recipe_handle_t* recipe, char* out_buffer,
                                                                 int32_t buffer_len, int32_t* out_required_len);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_create(const char* output_recipe_csv, const char* input_recipe_csv,
                                                     double frequency, elite_rtsi_io_handle_t** out_handle);
ELITE_C_EXPORT void elite_rtsi_io_destroy(elite_rtsi_io_handle_t* handle);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_connect(elite_rtsi_io_handle_t* handle, const char* ip, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_disconnect(elite_rtsi_io_handle_t* handle);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_is_connected(elite_rtsi_io_handle_t* handle, int32_t* out_connected);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_is_started(elite_rtsi_io_handle_t* handle, int32_t* out_started);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_controller_version(elite_rtsi_io_handle_t* handle,
                                                                     elite_version_info_t* out_version);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_set_speed_scaling(elite_rtsi_io_handle_t* handle, double scaling,
                                                                int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_set_standard_digital(elite_rtsi_io_handle_t* handle, int32_t index,
                                                                   int32_t level, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_set_configure_digital(elite_rtsi_io_handle_t* handle, int32_t index,
                                                                    int32_t level, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_set_analog_output_voltage(elite_rtsi_io_handle_t* handle, int32_t index,
                                                                        double value, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_set_analog_output_current(elite_rtsi_io_handle_t* handle, int32_t index,
                                                                        double value, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_set_external_force_torque(elite_rtsi_io_handle_t* handle,
                                                                        const double* value6, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_set_tool_digital_output(elite_rtsi_io_handle_t* handle, int32_t index,
                                                                      int32_t level, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_timestamp(elite_rtsi_io_handle_t* handle, double* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_payload_mass(elite_rtsi_io_handle_t* handle, double* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_payload_cog(elite_rtsi_io_handle_t* handle, double* out_value3);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_script_control_line(elite_rtsi_io_handle_t* handle, uint32_t* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_target_joint_positions(elite_rtsi_io_handle_t* handle, double* out_value6);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_target_joint_velocity(elite_rtsi_io_handle_t* handle, double* out_value6);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_actual_joint_positions(elite_rtsi_io_handle_t* handle, double* out_value6);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_actual_joint_torques(elite_rtsi_io_handle_t* handle, double* out_value6);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_actual_joint_velocity(elite_rtsi_io_handle_t* handle, double* out_value6);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_actual_joint_current(elite_rtsi_io_handle_t* handle, double* out_value6);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_actual_joint_temperatures(elite_rtsi_io_handle_t* handle,
                                                                            double* out_value6);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_actual_tcp_pose(elite_rtsi_io_handle_t* handle, double* out_value6);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_actual_tcp_velocity(elite_rtsi_io_handle_t* handle, double* out_value6);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_actual_tcp_force(elite_rtsi_io_handle_t* handle, double* out_value6);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_target_tcp_pose(elite_rtsi_io_handle_t* handle, double* out_value6);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_target_tcp_velocity(elite_rtsi_io_handle_t* handle, double* out_value6);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_digital_input_bits(elite_rtsi_io_handle_t* handle, uint32_t* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_digital_output_bits(elite_rtsi_io_handle_t* handle, uint32_t* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_robot_mode(elite_rtsi_io_handle_t* handle, int32_t* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_joint_mode(elite_rtsi_io_handle_t* handle, int32_t* out_value6);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_safety_status(elite_rtsi_io_handle_t* handle, int32_t* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_robot_status(elite_rtsi_io_handle_t* handle, uint32_t* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_runtime_state(elite_rtsi_io_handle_t* handle, int32_t* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_actual_speed_scaling(elite_rtsi_io_handle_t* handle, double* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_target_speed_scaling(elite_rtsi_io_handle_t* handle, double* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_robot_voltage(elite_rtsi_io_handle_t* handle, double* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_robot_current(elite_rtsi_io_handle_t* handle, double* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_elbow_position(elite_rtsi_io_handle_t* handle, double* out_value3);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_elbow_velocity(elite_rtsi_io_handle_t* handle, double* out_value3);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_safety_status_bits(elite_rtsi_io_handle_t* handle, uint32_t* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_analog_io_types(elite_rtsi_io_handle_t* handle, uint32_t* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_analog_input(elite_rtsi_io_handle_t* handle, int32_t index,
                                                               double* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_analog_output(elite_rtsi_io_handle_t* handle, int32_t index,
                                                                double* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_io_current(elite_rtsi_io_handle_t* handle, double* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_tool_mode(elite_rtsi_io_handle_t* handle, uint32_t* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_tool_analog_input_type(elite_rtsi_io_handle_t* handle, uint32_t* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_tool_analog_output_type(elite_rtsi_io_handle_t* handle, uint32_t* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_tool_analog_input(elite_rtsi_io_handle_t* handle, double* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_tool_analog_output(elite_rtsi_io_handle_t* handle, double* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_tool_output_voltage(elite_rtsi_io_handle_t* handle, double* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_tool_output_current(elite_rtsi_io_handle_t* handle, double* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_tool_output_temperature(elite_rtsi_io_handle_t* handle, double* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_tool_digital_mode(elite_rtsi_io_handle_t* handle, uint32_t* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_tool_digital_output_mode(elite_rtsi_io_handle_t* handle, int32_t index,
                                                                           uint32_t* out_value);
ELITE_C_EXPORT elite_c_status_t elite_rtsi_io_get_out_bool_registers0_to_31(elite_rtsi_io_handle_t* handle,
                                                                             uint32_t* out_value);